--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "ib.gymnaziumceska.sk",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -26,7 +27,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "typescript": "^5.2.2",
-    "vite": "^5.1.0",
+    "vite": "^5.1.4",
     "vite-tsconfig-paths": "^4.3.1"
   }
 }
